test_case/rust-lang_rust/52192_403684332.rs
rust
fn foo() -> i32 {
    let x;
    while true {
        x = 4;
        break;
    }
    x // error: use of possibly uninitialized variable
}
